--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "4.19.2"
+    "express": "4.19.2",
+    "mysql2": "^3.11.0"
   },
   "devDependencies": {
     "standard": "17.1.0"
